--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -62,14 +62,14 @@
 \section{Procédures mise en \oe uvre}
 %\section{Les problèmatiques}
 \subsection{Création de l'air de jeu}
-Afin de générer une aire de jeu personnalisable nous avons decidé de stocker les maps dans des fichiers, notre jeu devait donc être en mesure de récupérer ces données et les utiliser. Pour ce faire nous avons commencé par coder une fonction qui récupére chaque caractère du fichier et les stocke dans une structure map qui contient un tableau de caractère pour la map, associé à la largeur et la hauteur, un tableau de zone de réaparition.\\
+Afin de générer une aire de jeu personnalisable nous avons decidé de stocker les airs de jeu dans des fichiers, notre jeu devait donc être en mesure de récupérer ces données et les utiliser. Pour ce faire nous avons commencé par coder une fonction qui récupére chaque caractère du fichier et les stocke dans une structure map qui contient un tableau de caractère pour la map, associé à la largeur et la hauteur, un tableau de zone de réaparition.\\
 \subsection{Gestion client/serveur}
-Notre compréhension de l'enoncer nous a ammener a faire un jeu en temps reel. La solution qui a été retenue est de separer le jeu en plusieurs executables, un executable serveur et des clients qui communique entre eux grace a des files de messages. Les clients demandent des actions au server qui leur repond en les syncronisants entre eux. Nous avons choisi d'utiliser \emph{mqueue.h}, une librairie de gestion de file de message qui nous permet d'ecrire des chaîne de caractere dans un flux. Cette solution nous a mené a de nouvelle problematique.\\
-Les messages sont de taille variable et il faut que le server et le client est connaissance de la taille de l'information à recuperer et comment l'interpreter. De plus si on envois plusieurs messages sur une file de message lu par plusieurs processus, il y a un risque que les message se melange avec un bout de message par client.\\
-Pour resoudre ces probleme, nous avons créer une structure \emph{msg}, qui contient l'id du robot, qui envoie l'action, et l'identifiant de l'action choisi. Chaque action est differencier des autres grace a un identifiant qui indique au processus la taille du message a recuperer. Puis pour eviter que les messages soit capter par le mauvais processus, ils sont concatenner avant d'être envoyer.\\
+Notre compréhension de l'enoncer nous a ammené a faire un jeu en temps reel. La solution qui a été retenue est de séparer le jeu en plusieurs executables, un executable serveur et des clients qui communiquent entre eux grace à des files de messages. Les clients demandent des actions au serveur qui leur répond en les syncronisants entre eux. Nous avons choisi d'utiliser \emph{mqueue.h}, une librairie de gestion de file de messages qui nous permet d'écrire des chaîne de caractères dans un flux. Cette solution nous a mené à de nouvelles problematiques.\\
+Les messages sont de tailles variables et il faut que le serveur et le client ai connaissance de la taille de l'information à récuperer et comment l'interpréter. De plus si on envoi plusieurs messages sur une file de messages lu par plusieurs processus, il y a un risque que les messages se mélange avec une partie de message par client.\\
+Pour resoudre ces problemes, nous avons créé une structure \emph{msg}, qui contient l'identifiant du robot, qui envoie l'action, et l'identifiant de l'action choisi. Chaque action est differencié des autres grâce à un identifiant qui indique au processus la taille du message à recuperer. Puis pour eviter que les messages soit capté par le mauvais processus, ils sont concaténés avant d'être envoyés.\\
 \subsection{Commande et script}
-
-\subsection{affichage}
+Le dernier problème auquel nous avons été confronté fût la gestion des commandes et du script. L'objectif était d'integré un langage minimaliste pour permettre au joueur de controler les robots aussi bien en tapant des commandes une par une qu'en lire plusieurs dans un fichier.
+nous avons donc penser a une structure commande qui contiendrais le nom de la commande, le nombre d'argument, le nombre de sous commande et un tableau de sous commande. Chaque élément du script est une commande qui est situé dans le tableau de sous commande d'une autre commande et qui peut elle même contenir des sous commandes.\\
 
 
 \newpage
